# DG_Demo

./: CMakeLists.txt  README.md
1D_Euler/: CMakeLists.txt  main.cpp
1D_scalar/: CMakeLists.txt  main.cpp
2D_Euler/: CMakeLists.txt  HLL.hpp  Lh.hpp  TVB.hpp  basis.hpp  boundary.hpp  calculateDt.hpp  compute_Rinv.hpp  global.hpp  init.hpp  main.cpp  matmul.hpp  minmod.hpp  output.hpp  pmin.hpp  pressure.hpp  umax.hpp
